# Data-Structures-and-Algorithms

Lab1/_stack/: App.cpp  CMakeLists.txt  ShortTest.cpp  Stack.cpp  Stack.h
Lab1/queue/: CMakeLists.txt  Queue.cpp  Queue.h
Lab2/LinkedListEx/: CMakeLists.txt
Lab2/SortedIndexedList/: CMakeLists.txt  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  SortedIndexeList.cpp  SortedIndexedList.h
Lab3/BagDLLA/: Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ExtendedTest.cpp
Lab4/MultiMap/: CMakeLists.txt  ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h
Lab5/SortedBag/: CMakeLists.txt  ExtendedTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h  main.cpp
